--- a/src/coreclr/src/nativeaot/BuildIntegration/Microsoft.NETCore.Native.targets
+++ b/src/coreclr/src/nativeaot/BuildIntegration/Microsoft.NETCore.Native.targets
@@ -276,6 +276,14 @@ The .NET Foundation licenses this file to you under the MIT license.
       <CustomLinkerArg Include="-o &quot;$(NativeBinary)&quot;" Condition="'$(TargetOS)' != 'windows'" />
       <CustomLinkerArg Include="/OUT:&quot;$(NativeBinary)&quot;" Condition="'$(TargetOS)' == 'windows'" />
       <CustomLinkerArg Include="/DEF:&quot;$(ExportsFile)&quot;" Condition="'$(TargetOS)' == 'windows' and $(ExportsFile) != ''" />
+      <CustomLinkerArg Include="/EXPORT:g_gc_flavor_debug_contract,DATA" Condition="'$(OS)' == 'Windows_NT'" />
+      <CustomLinkerArg Include="/EXPORT:g_GCDebugContract,DATA" Condition="'$(OS)' == 'Windows_NT'" />
+      <CustomLinkerArg Include="/EXPORT:g_RuntimeInstanceDebugContract,DATA" Condition="'$(OS)' == 'Windows_NT'" />
+      <CustomLinkerArg Include="/EXPORT:g_ThreadStoreDebugContract,DATA" Condition="'$(OS)' == 'Windows_NT'" />
+      <CustomLinkerArg Include="/EXPORT:g_ThreadDebugContract,DATA" Condition="'$(OS)' == 'Windows_NT'" />
+      <CustomLinkerArg Include="/EXPORT:g_ObjectDebugContract,DATA" Condition="'$(OS)' == 'Windows_NT'" />
+      <CustomLinkerArg Include="/EXPORT:g_EETypeDebugContract,DATA" Condition="'$(OS)' == 'Windows_NT'" />
+      <CustomLinkerArg Include="/EXPORT:g_NetNativeRuntimeDebugHeader,DATA" Condition="'$(OS)' == 'Windows_NT'" />
       <CustomLinkerArg Include="/LIBPATH:&quot;%(AdditionalNativeLibraryDirectories.Identity)&quot;" Condition="'$(TargetOS)' == 'windows' and '@(AdditionalNativeLibraryDirectories->Count())' &gt; 0" />
       <CustomLinkerArg Include="-exported_symbols_list &quot;$(ExportsFile)&quot;" Condition="'$(TargetOS)' == 'OSX' and $(ExportsFile) != ''" />
       <CustomLinkerArg Include="-Wl,--version-script=$(ExportsFile)" Condition="'$(TargetOS)' != 'windows' and '$(TargetOS)' != 'OSX' and $(ExportsFile) != ''"/>
